--- a/package.json
+++ b/package.json
@@ -1,280 +1,20 @@
 {
-  "name": "rds_asset_import_script",
-  "version": "1.0.0",
-  "description": "TypeScript script project with Jest tests.",
-  "main": "index.js",
+  "name": "rds-asset-import-script",
+  "version": "0.1.0",
+  "private": true,
+  "type": "commonjs",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.42.0",
-    "@typescript-eslint/parser": "^8.42.0",
-    "eslint": "^9.34.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "jest": "^30.1.3",
-    "prettier": "^3.6.2",
-    "ts-jest": "^29.4.1",
+    "typescript": "^5.5.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
-  },
-  "directories": {
-    "test": "tests"
-  },
-  "dependencies": {
-    "acorn": "^8.15.0",
-    "acorn-jsx": "^5.3.2",
-    "acorn-walk": "^8.3.4",
-    "ajv": "^6.12.6",
-    "ansi-escapes": "^4.3.2",
-    "ansi-regex": "^6.2.0",
-    "ansi-styles": "^4.3.0",
-    "anymatch": "^3.1.3",
-    "arg": "^4.1.3",
-    "argparse": "^2.0.1",
-    "babel-jest": "^30.1.2",
-    "babel-plugin-istanbul": "^7.0.0",
-    "babel-plugin-jest-hoist": "^30.0.1",
-    "babel-preset-current-node-syntax": "^1.2.0",
-    "babel-preset-jest": "^30.0.1",
-    "balanced-match": "^1.0.2",
-    "brace-expansion": "^1.1.12",
-    "braces": "^3.0.3",
-    "browserslist": "^4.25.4",
-    "bs-logger": "^0.2.6",
-    "bser": "^2.1.1",
-    "buffer-from": "^1.1.2",
-    "callsites": "^3.1.0",
-    "camelcase": "^5.3.1",
-    "caniuse-lite": "^1.0.30001739",
-    "chalk": "^4.1.2",
-    "char-regex": "^1.0.2",
-    "ci-info": "^4.3.0",
-    "cjs-module-lexer": "^2.1.0",
-    "cliui": "^8.0.1",
-    "co": "^4.6.0",
-    "collect-v8-coverage": "^1.0.2",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "concat-map": "^0.0.1",
-    "convert-source-map": "^2.0.0",
-    "create-require": "^1.1.1",
-    "cross-spawn": "^7.0.6",
-    "debug": "^4.4.1",
-    "dedent": "^1.6.0",
-    "deep-is": "^0.1.4",
-    "deepmerge": "^4.3.1",
-    "detect-newline": "^3.1.0",
-    "diff": "^4.0.2",
-    "eastasianwidth": "^0.2.0",
-    "electron-to-chromium": "^1.5.212",
-    "emittery": "^0.13.1",
-    "emoji-regex": "^9.2.2",
-    "error-ex": "^1.3.2",
-    "escalade": "^3.2.0",
-    "escape-string-regexp": "^4.0.0",
-    "eslint-scope": "^8.4.0",
-    "eslint-visitor-keys": "^4.2.1",
-    "espree": "^10.4.0",
-    "esprima": "^4.0.1",
-    "esquery": "^1.6.0",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^5.3.0",
-    "esutils": "^2.0.3",
-    "execa": "^5.1.1",
-    "exit-x": "^0.2.2",
-    "expect": "^30.1.2",
-    "fast-deep-equal": "^3.1.3",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
-    "fb-watchman": "^2.0.2",
-    "file-entry-cache": "^8.0.0",
-    "fill-range": "^7.1.1",
-    "find-up": "^5.0.0",
-    "flat-cache": "^4.0.1",
-    "flatted": "^3.3.3",
-    "foreground-child": "^3.3.1",
-    "fs.realpath": "^1.0.0",
-    "gensync": "^1.0.0-beta.2",
-    "get-caller-file": "^2.0.5",
-    "get-package-type": "^0.1.0",
-    "get-stream": "^6.0.1",
-    "glob": "^10.4.5",
-    "glob-parent": "^6.0.2",
-    "globals": "^14.0.0",
-    "graceful-fs": "^4.2.11",
-    "handlebars": "^4.7.8",
-    "has-flag": "^4.0.0",
-    "html-escaper": "^2.0.2",
-    "human-signals": "^2.1.0",
-    "ignore": "^5.3.2",
-    "import-fresh": "^3.3.1",
-    "import-local": "^3.2.0",
-    "imurmurhash": "^0.1.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-arrayish": "^0.2.1",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
-    "is-generator-fn": "^2.1.0",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "is-stream": "^2.0.1",
-    "isexe": "^2.0.0",
-    "istanbul-lib-coverage": "^3.2.2",
-    "istanbul-lib-instrument": "^6.0.3",
-    "istanbul-lib-report": "^3.0.1",
-    "istanbul-lib-source-maps": "^5.0.6",
-    "istanbul-reports": "^3.2.0",
-    "jackspeak": "^3.4.3",
-    "jest-changed-files": "^30.0.5",
-    "jest-circus": "^30.1.3",
-    "jest-cli": "^30.1.3",
-    "jest-config": "^30.1.3",
-    "jest-diff": "^30.1.2",
-    "jest-docblock": "^30.0.1",
-    "jest-each": "^30.1.0",
-    "jest-environment-node": "^30.1.2",
-    "jest-haste-map": "^30.1.0",
-    "jest-leak-detector": "^30.1.0",
-    "jest-matcher-utils": "^30.1.2",
-    "jest-message-util": "^30.1.0",
-    "jest-mock": "^30.0.5",
-    "jest-pnp-resolver": "^1.2.3",
-    "jest-regex-util": "^30.0.1",
-    "jest-resolve": "^30.1.3",
-    "jest-resolve-dependencies": "^30.1.3",
-    "jest-runner": "^30.1.3",
-    "jest-runtime": "^30.1.3",
-    "jest-snapshot": "^30.1.2",
-    "jest-util": "^30.0.5",
-    "jest-validate": "^30.1.0",
-    "jest-watcher": "^30.1.3",
-    "jest-worker": "^30.1.0",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^4.1.0",
-    "jsesc": "^3.1.0",
-    "json-buffer": "^3.0.1",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-schema-traverse": "^0.4.1",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^2.2.3",
-    "keyv": "^4.5.4",
-    "leven": "^3.1.0",
-    "levn": "^0.4.1",
-    "lines-and-columns": "^1.2.4",
-    "locate-path": "^6.0.0",
-    "lodash.memoize": "^4.1.2",
-    "lodash.merge": "^4.6.2",
-    "lru-cache": "^5.1.1",
-    "make-dir": "^4.0.0",
-    "make-error": "^1.3.6",
-    "makeerror": "^1.0.12",
-    "merge-stream": "^2.0.0",
-    "micromatch": "^4.0.8",
-    "mimic-fn": "^2.1.0",
-    "minimatch": "^3.1.2",
-    "minimist": "^1.2.8",
-    "minipass": "^7.1.2",
-    "ms": "^2.1.3",
-    "napi-postinstall": "^0.3.3",
-    "natural-compare": "^1.4.0",
-    "neo-async": "^2.6.2",
-    "node-int64": "^0.4.0",
-    "node-releases": "^2.0.19",
-    "normalize-path": "^3.0.0",
-    "npm-run-path": "^4.0.1",
-    "once": "^1.4.0",
-    "onetime": "^5.1.2",
-    "optionator": "^0.9.4",
-    "p-limit": "^3.1.0",
-    "p-locate": "^5.0.0",
-    "p-try": "^2.2.0",
-    "package-json-from-dist": "^1.0.1",
-    "parent-module": "^1.0.1",
-    "parse-json": "^5.2.0",
-    "path-exists": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^3.1.1",
-    "path-scurry": "^1.11.1",
-    "picocolors": "^1.1.1",
-    "picomatch": "^2.3.1",
-    "pirates": "^4.0.7",
-    "pkg-dir": "^4.2.0",
-    "prelude-ls": "^1.2.1",
-    "pretty-format": "^30.0.5",
-    "punycode": "^2.3.1",
-    "pure-rand": "^7.0.1",
-    "react-is": "^18.3.1",
-    "require-directory": "^2.1.1",
-    "resolve-cwd": "^3.0.0",
-    "resolve-from": "^4.0.0",
-    "semver": "^6.3.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
-    "signal-exit": "^4.1.0",
-    "slash": "^3.0.0",
-    "source-map": "^0.6.1",
-    "source-map-support": "^0.5.13",
-    "sprintf-js": "^1.0.3",
-    "stack-utils": "^2.0.6",
-    "string-length": "^4.0.2",
-    "string-width": "^5.1.2",
-    "string-width-cjs": "^4.2.3",
-    "strip-ansi": "^7.1.0",
-    "strip-ansi-cjs": "^6.0.1",
-    "strip-bom": "^4.0.0",
-    "strip-final-newline": "^2.0.0",
-    "strip-json-comments": "^3.1.1",
-    "supports-color": "^7.2.0",
-    "synckit": "^0.11.11",
-    "test-exclude": "^6.0.0",
-    "tmpl": "^1.0.5",
-    "to-regex-range": "^5.0.1",
-    "type-check": "^0.4.0",
-    "type-detect": "^4.0.8",
-    "type-fest": "^0.21.3",
-    "uglify-js": "^3.19.3",
-    "undici-types": "^7.10.0",
-    "unrs-resolver": "^1.11.1",
-    "update-browserslist-db": "^1.1.3",
-    "uri-js": "^4.4.1",
-    "v8-compile-cache-lib": "^3.0.1",
-    "v8-to-istanbul": "^9.3.0",
-    "walker": "^1.0.8",
-    "which": "^2.0.2",
-    "word-wrap": "^1.2.5",
-    "wordwrap": "^1.0.0",
-    "wrap-ansi": "^8.1.0",
-    "wrap-ansi-cjs": "^7.0.0",
-    "wrappy": "^1.0.2",
-    "write-file-atomic": "^5.0.1",
-    "y18n": "^5.0.8",
-    "yallist": "^3.1.1",
-    "yargs": "^17.7.2",
-    "yargs-parser": "^21.1.1",
-    "yn": "^3.1.1",
-    "yocto-queue": "^0.1.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wpenris2/rds_asset_import_script.git"
-  },
-  "bugs": {
-    "url": "https://github.com/wpenris2/rds_asset_import_script/issues"
-  },
-  "homepage": "https://github.com/wpenris2/rds_asset_import_script#readme",
-  "type": "commonjs"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.14.11"
+  }
 }
