--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
+    "gen-scss": "ts-node src/features/gen-scss-from-json.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
