--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "test": "jest"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "ts-node": "^10.9.2",
+    "@types/jest": "^29.5.14",
+    "@types/minimist": "^1.2.5",
+    "@types/node": "^20.14.11",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20.14.11"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "minimist": "^1.2.8"
   }
 }
