--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest"
+  "test": "vitest",
+  "regression": "vitest run -c vitest.regression.config.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
